--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,11 @@
-/*-------------------------Global--------------------  */
-
+/* Global ===================== */
 :root {
-    --white-color: #F3F3F3;
-    --white-ice:#e0e0e0;
-    --gray-light: #C7C7C7;
-    --gray:#808080;
-    --gray-dark: #2C2C2C;
-    --red-light: #F03232;
-    --red: #FF0000;
-    --green-light: #32CD32;
-    --green: #008000;
-
+    --green: #49AA26;
+    --red: #e92929;
+    --gray: #6d6d6d;
+    --gray-light: #e0e0e0;
+    --dark-gray: #2c2c2c;
+    --white-ice: #fafafa;
 }
 
 * {
@@ -20,27 +15,24 @@
 }
 
 html {
-    font-size:93.75%; /* 15px*/
+    font-size: 93.75%; /* 15px */
 }
 
 body {
-    background: var(--white-ice);
-    color: var(--white-color);
-
-    font-family: "Roboto", sans-serif;
+    background: var(--gray-light);
+    font-family:'Poppins', sans-serif
 }
 
 .sr-only {
+    position: absolute;
     width: 1px;
     height: 1px;
     padding: 0;
     margin: -1px;
-    border-width: 0;
-    clip: rect(0, 0, 0, 0);
-
-    position: absolute;
     overflow: hidden;
+    clip: rect(0, 0, 0, 0);
     white-space: nowrap;
+    border-width: 0;
 }
 
 .container {
@@ -48,24 +40,23 @@ body {
     margin: auto;
 }
 
-/*--------------------Title------------------------*/
-
+/* Titles ===================== */
 h2 {
-    color: var(--white-color);
-
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
-     
+    color: var(--dark-gray);
+
     font-weight: normal;
 }
 
-/*----------------Button----Links--------------------*/
-a { 
-    color:var(--gray-dark);
+/* Links & Buttons ===================== */
+a {
+    color: var(--gray);
     text-decoration: none;
 }
+
 a:hover {
-    color: var(--gray);
+    color: var(--dark-gray);
 }
 
 button {
@@ -74,242 +65,245 @@ button {
 
     border: none;
 
-    color: var(--white-color);
-    background:var(--gray-dark);
+    color: white;
+    background: var(--gray);
 
     padding: 0;
 
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
+
     cursor: pointer;
 }
-button:hover{
-    background: var(--gray);
+
+button:hover {
+    background: var(--dark-gray);
 }
 
 .button.new {
     display: inline-block;
-    margin-bottom: 1rem;
+    margin-bottom: .8rem;
 }
 
 .button.cancel {
-    color: var(--red-light);
-    border: 2px var(--red-light) solid;
-    border-radius: 0.5rem;
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
 
     height: 50px;
 
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    opacity: 0.5;
+
+    opacity: 0.6;
 }
+
 .button.cancel:hover {
     opacity: 1;
 }
 
-/*--------------------Header------------------------*/
-
+/* Header ===================== */
 header {
-    background: var(--gray-dark);
-    padding: 2rem 0 100px;
-
+    background: var(--dark-gray);
+    padding: 2rem 0 10rem;
     text-align: center;
 }
 
 #logo {
-    color: var(--white-ice);
-
-    font-weight: 500;
-    font-family: 'Dela Gothic One', cursive;
+    color: #fff;
+    font-weight: 100;
 }
 
-/*--------------------Balance-------------------------*/
-
+/* Balance ===================== */
 #balance {
-    margin-top: -4em;
+    margin-top: -8rem;
 }
 
 #balance h2 {
-    margin-top: 0;
+    color:white;
+    margin-top:0;
 }
 
-/*-----------------------Cards-------------------------*/
-
+/* Cards ===================== */
 .card {
-    background: var(--gray-light);
-    color: var(--white-color);
-
+    background: white;
     padding: 1.5rem 2rem;
-    margin-bottom: 2rem;
     border-radius: 0.25rem;
+
+    margin-bottom: 2rem;
+
+    color: var(--dark-gray);
 }
 
 .card h3 {
+    font-weight: normal;
+    font-size: 1rem;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    font-weight: normal;
-    font-size: 1rem;
 }
 
 .card p {
     font-size: 2rem;
-    line-height: 2rem;
+    line-height: 3rem;
+    white-space:nowrap;
     margin-top: 1rem;
 }
 
 .card.total {
-    background: var(--gray-dark);
+    background: var(--gray);
+    color: var(--white-ice);
 }
 
-/*--------------------Table-------------------------*/
-#transactions {
+/* Table ===================== */
+#transaction {
     display: block;
-    overflow-x: auto;
-}
-#transactions h2 {
-    color: var(--gray-dark);
     width: 100%;
+    overflow-x: auto;
 }
 #data-table {
     width: 100%;
-    border-spacing: 0 0.4rem;
-
-}
-
-table thead th:first-child, table tbody td:first-child {
-    border-radius: 0.25rem 0 0 0.25rem;
-}
-
-table thead th:last-child, table tbody td:last-child {
-    border-radius: 0 0.25rem 0.25rem 0;
-}
-
-table tbody tr {
-    opacity: 0.8;
-}
-
-table tbody tr:hover {
-    opacity: 1;
-}
-
-table thead th {
-    background: var(--gray-light);
-    color: var(--gray-dark);
-
-    padding: 1rem 2rem;
-
-    font-weight: 400;
-    text-align: left;
-}
-
-table tbody td {
-    background: var(--white-color);;
-    color: var(--gray-dark);
-    
-    padding: 1rem 2rem;
-    
-    text-align: left;
-    font-weight: normal;
-}
-
-td.description {
-    color: var(--gray-dark);
-}
-
-td.income {
-    color: var(--green-light);
-}
-
-td.expense {
-    color: var(--red);
-}
-
-td.date {
+    border-spacing: 0 0.5rem;
     color: var(--gray);
 }
 
+table thead tr th:first-child, 
+table tbody tr td:first-child
+{
+    border-radius: 0.25rem 0 0 0.25rem;
+}
 
-/*--------------------Modal-------------------------*/
+table thead tr th:last-child, 
+table tbody tr td:last-child{
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
+table thead th {
+    background: var(--white-ice);
+
+    font-weight: normal;
+    padding: 1rem 2rem;
+
+    text-align: left;
+}
+
+table tbody tr {
+    opacity: 0.7
+}
+
+table tbody tr:hover {
+    opacity: 1
+}
+
+table tbody td {
+    background:var(--white-ice);
+    padding: 1rem 2rem;
+}
+
+td.description {
+    color: var(--gray);
+}
+
+td.income {
+    color: #12a454;
+}
+
+td.expense {
+    color: #e92929;
+}
+
+/* Modal ===================== */
 .modal-overlay {
     width: 100%;
     height: 100%;
-    
-    background-color: rgb(0,0,0,0.7);
-    
+
+    background-color: rgba(0,0,0,0.7);
+
     position: fixed;
     top: 0;
-    
-    display: flex;
+
+    display:flex;
     align-items: center;
     justify-content: center;
 
     opacity: 0;
     visibility: hidden;
+
+    z-index: 999;
 }
-.modal-overlay.active{
+
+.modal-overlay.active {
     opacity: 1;
     visibility: visible;
 }
+
 .modal {
-    background: var(--white-color);
-    padding: 2.5rem;
-    width: 500px;
-    max-width:100%;
+    background:var(--gray-light);
+    padding: 2.4rem;
+
+    position: relative;
+    z-index: 1;
 }
 
-/*-----------------------Form-------------------------*/
+
+/* Form ===================== */
+#form {
+    max-width: 500px;
+}
+
 #form h2 {
-    color: var(--gray-dark);
     margin-top: 0;
 }
-#form {
-    color: var(--gray-dark);
-    max-width: 490px;
-}
+
 input {
-border: none;
-border-radius: 0.5rem;
+    border: none;
+    border-radius: 0.2rem;
 
-padding: 0.6rem;
+    padding: 0.8rem;
 
-width:100%;
+    width: 100%;
 }
+
 .input-group {
-    margin-top: 0.5rem;
+    margin-top: 0.8rem;
 }
-.input-group small{
-    opacity: 0.5;
+
+.input-group .help{
+    opacity: 0.4;
 }
+
 .input-group.actions {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.input-group.actions .button, 
-.input-group.actions button {
-    width: 45%;
-}
-/*--------------------Roda-pé-------------------------*/
 
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
+}
+
+
+/* Footer ===================== */
 footer {
     text-align: center;
-    
-    padding: 5rem 0 2rem;
+    padding: 4rem 0 2rem;
     color: var(--gray);
-    opacity: 0.5;
+
+    opacity: 0.6;
 }
 
-/*--------------------Responsive-------------------------*/
+
+/* Responsive ===================== */
 @media (min-width: 800px) {
-    html{
+    html {
         font-size: 87.5%;
     }
+
     #balance {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);  /* or "1fr 1fr 1fr;" */
+        grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
     }
 }
