--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ html {
 
 body {
     background: var(--gray-light);
-    font-family:'Poppins', sans-serif
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .sr-only {
@@ -111,7 +111,7 @@ header {
 
 #logo {
     color: #fff;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 /* Balance ===================== */
@@ -136,7 +136,7 @@ header {
 }
 
 .card h3 {
-    font-weight: normal;
+    font-weight: 700;
     font-size: 1rem;
 
     display: flex;
